--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     </div>
 
   </div>
-  <div class="card-text-center">
-      <div class="card-footer text-center">
+      <div class="card-text-center border-top border-info">
+        <div class="card-footer text-center">
           Copyright &COPY;
+        </div>
       </div>
- </div>
 
 
   
