--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="row">
         <div class="col-md-2">
-            <img src="https://placehold.it/150x150" alt="Rob photo">
+            <img id="bio-image" src="Assets/images/IMG_9344.jpg" alt="Rob photo">
         </div>
         <div class="col-md-10">
             <p class="text">Hello there! My name is Rob Krueger. I enjoy cooking, animals, canoe trips, skiing, travel, video games, long guitar jams, hockey, and sunshine. I am learning to code, and this is my first website!</p>
@@ -54,6 +54,8 @@
     </div>
 
   </div>
+<br>
+<br>
       <div class="card-text-center border-top border-info">
         <div class="card-footer text-center">
           Copyright &COPY;
