updated css but still issues w the bootstrap used for portfolio for centering text

--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,19 @@
   <meta charset="UTF-8">
   <title>Bootstrap Portfolio Rob Krueger</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 
 <body>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
           <div class="p-3 mb-2 bg-info text-white">
             <h1>Rob Krueger</h1>
           </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-8">
           <ul class="nav justify-content-end">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">About |</a>
