--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta charset="UTF-8">
   <title>Bootstrap Portfolio Rob Krueger</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 
 <body>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
           <div class="p-3 mb-2 bg-info text-white">
             <h1>Rob Krueger</h1>
           </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-8">
           <ul class="nav justify-content-end">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">About |</a>
@@ -43,10 +44,10 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-3">
             <img id="bio-image" src="Assets/images/IMG_9344.jpg" alt="Rob photo">
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9">
             <p class="text">Hello there! My name is Rob Krueger. I enjoy cooking, animals, canoe trips, skiing, travel, video games, long guitar jams, hockey, and sunshine. I am learning to code, and this is my first website!</p>
             <p class="text">I started this course at the beginning of May and thus far have quite enjoyed it. I do believe it will take a bit of time to learn the basic .css elements needed to style with proficiency!</p>
             <p class="text">My patience is being tested by this assignment! But that is quite alright! My calm demeanor never lets the hours of tedious code mistakes, changes, and general frustration get the better of me! ;-)</p>
