Updated css and portfolio page to better place text on images

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,31 +46,39 @@
     <div class="row justify-content-start">
       <div class="box col-md-4">
             <img id="hangman" src="Assets/images/hangman.jpg" alt="Hangman">
-                <div class="carousel-caption p-3 bg-info text-white">
+                <div class="customtext carousel-caption p-3 bg-info text-white">
               <h5>Hangman</h5>
                 </div>
         </div>
         <div class="box col-md-4">
             <img id="rpggame" src="Assets/images/rpggame.jpg" alt="RPG Game">
-              <div class="carousel-caption p-3 bg-info text-white">RPG Game</div>
+              <div class="customtext carousel-caption p-3 bg-info text-white">
+                <h5>RPG Game</h5>
+              </div>
             </div>
      </div>
       <br>
       <div class="row justify-content-start">
           <div class="box col-md-4">
               <img id="triviagame" src="Assets/images/triviagame.jpg" alt="Trivia Game">
-                <div class="carousel-caption p-3 bg-info text-white">Trivia Game</div>
+                <div class="customtext carousel-caption p-3 bg-info text-white">
+                  <h5>Trivia Game</h5>
+                </div>
               </div>
             <div class="box col-md-4">
                 <img id="rutgersinfowidget" src="Assets/images/rutgersinfowidget.jpg" alt="Rutgers Info Widget">
-                  <div class="carousel-caption p-3 bg-info text-white">Rutgers Info Widget</div>
+                  <div class="customtext carousel-caption p-3 bg-info text-white">
+                    <h5>Rutgers Info Widget</h5>
+                  </div>
             </div>
       </div>
           <br>
           <div class="row justify-content-start">
               <div class="box col-md-4">
                   <img id="rockpaperscissors" src="Assets/images/rockspaperscissors.jpg" alt="Rock Paper Scissors">
-                    <div class="carousel-caption p-3 bg-info text-white">Rock Paper Scissors</div>
+                    <div class="customtext carousel-caption p-3 bg-info text-white">
+                      <h5>Rock Paper Scissors</h5>
+                    </div>
                   </div>
                   </div>
   </div>
